@@ -98,7 +98,11 @@ typedef enum {
 	GC_EVENT_MARK_END,
 	GC_EVENT_RECLAIM_START,
 	GC_EVENT_RECLAIM_END,
-	GC_EVENT_END
+	GC_EVENT_END,
+	GC_EVENT_PRE_STOP_WORLD,
+	GC_EVENT_POST_STOP_WORLD,
+	GC_EVENT_PRE_START_WORLD,
+	GC_EVENT_POST_START_WORLD
 } GCEventType;
 
 GC_API void (*GC_notify_event) GC_PROTO((GCEventType event_type));
